2008-04-22  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt and Maciej Stachowiak.
        
        Renamed "needsActivation" to "needsFullScopeChain" because lying will
        make hair grow on the backs of your hands.

2008-04-21  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        Fixed ScopeChainNode lifetime problems:
        
        (1) In "with" and "catch" scopes, we would construct a ScopeChain
        object and then jump across its destructor, leaking the ScopeChainNode
        we had pushed.

        (2) In global and eval scopes, we would fail to initially ref
        "scopeChain", causing us to overrelease it later. Now that we ref
        "scopeChain" properly, we also need to deref it when the script
        terminates.

        SunSpider reports a .2% regression, but an earlier round of ScopeChain
        refactoring was a .4% speedup, so there.

2008-04-22  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Alexey.
        
        - use global object instead of null for "this" on unqualified calls
        
        This fixes 10 more JSC test regressions.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):

2008-04-22  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        - throw proper exceptions for objects that don't implement call or construct
        
        This fixes 21 more JSC test regressions. It is also seemingly an
        0.5% progression.

        * VM/ExceptionHelpers.cpp:
        (KJS::createNotAnObjectError):
        (KJS::createNotAConstructorError):
        (KJS::createNotAFunctionError):
        * VM/ExceptionHelpers.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):

2008-04-21  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff.

        Implement emitCode for ConstDeclNode.

        This fixes the crash (assertion) in js1_5/Scope/scope-001.js

        * VM/CodeGenerator.cpp: